--- a/.env
+++ b/.env
@@ -1,10 +1,22 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+# Configuración general
+BASE_URL=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET="MpVmAijB+1Eq0wYFely1+G5uj8sho/5ufsjDnmBw+ao="
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+# Configuración de la base de datos
+POSTGRES_DB=bproject
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin
+POSTGRES_PORT=5432
 
-DATABASE_URL="postgresql://myuser:mypassword@localhost:5432/mydatabase"
-NEXTAUTH_SECRET="your_nextauth_secret"
+# Configuración de Google Auth
 GOOGLE_CLIENT_ID="your_google_client_id"
 GOOGLE_CLIENT_SECRET="your_google_client_secret"
+
+# Otras configuraciones
+NEXT_PUBLIC_GOOGLE_ANALYTICS='G-0000000'
+
+PORT=3000
+# Configuración de pgAdmin (si lo usas)
+PGADMIN_DEFAULT_EMAIL=pgadmin4@pgadmin.org
+PGADMIN_DEFAULT_PASSWORD=admin
