--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "my-nextjs-project",
+  "name": "b-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run check-types && next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write .",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest",
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.18.0",
     "framer-motion": "^11.3.28",
@@ -19,9 +23,11 @@
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
     "prisma": "^5.18.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-error-boundary": "^4.0.13"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.13",
+    "react-hook-form": "^7.52.2",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.7.0",
@@ -39,6 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "eslint-plugin-storybook": "^0.8.0",
